# SirenDetection

./: CMakeLists.txt  README.md
SirenDetection_generated/: CMakeLists.txt
SirenDetection_generated/AlertDecision/implementation/includes/: AlertDecisionCalculator.h  AlertDecisionImpl.h  IPPortShowAlert.h  IRPortEvVechicle.h  IRPortVehicleMode.h
SirenDetection_generated/AlertDecision/implementation/src/: AlertDecisionCalculator.cpp  AlertDecisionImpl.cpp
SirenDetection_generated/Common/implementation/includes/: AudioFile.h  calculation.h  utils.h
SirenDetection_generated/Common/implementation/src/: AudioFFT.cpp  AudioFile.cpp  calculation.cpp  utils.cpp  wavfile.cpp
SirenDetection_generated/IdentifyEV/implementation/includes/: IPPortEv.h  IRPortPreprocessedSig.h  IdentifyEVImpl.h  IdentifyEvCalculator.h
SirenDetection_generated/IdentifyEV/implementation/src/: IdentifyEVImpl.cpp  IdentifyEvCalculator.cpp
SirenDetection_generated/Preprocessing/implementation/DspFilters/: DSPFilters.h
SirenDetection_generated/Preprocessing/implementation/includes/: IPPortPreProcessedSig.h  IRPortMicrophone.h  PreprocessingCalculator.h  PreprocessingImpl.h
SirenDetection_generated/Preprocessing/implementation/src/: PreprocessingCalculator.cpp  PreprocessingImpl.cpp  preprocess.cpp
SirenDetection_generated/VehicleMode/implementation/includes/: IPPortVehicleMode.h  IRPortECU.h  VehicleModeCalculator.h  VehicleModeImpl.h
SirenDetection_generated/VehicleMode/implementation/src/: VehicleModeCalculator.cpp  VehicleModeImpl.cpp
include/: AudioFile.h  calculation.h  utils.h  (+1 more)
(+4 files in other folders)
